--- a/pages/pacific.html
+++ b/pages/pacific.html
@@ -12,7 +12,7 @@ permalink: /pacific.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
@@ -52,36 +52,41 @@ permalink: /pacific.html
 </head>
 <body>
 
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <h4><p><b>Everett Phipps Babcock</b></p></h4>
-    <br>
-    <em>1874-1928</em>
-    <br>
-    <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
-    <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
-    <br>
-    <p>Other Work: 
-    <br>
-    <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
-    <br> 
-    <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a> 
-    <br>
-    <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
-    <br>
-    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
-    <br>
+  <div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+      <h4><p><b>Pacific Refrigerating Company</b></p></h4>
+      <br>
+      <strong>Status: Demolished</strong>
+      <br>
+      <p>Created: January 30, 1929
+      <br>
+      Address: <a href="https://aweymo.github.io/losttacoma/browse.html#2501-15%20JEFFERSON%20AVE%2C%20TACOMA">2501-15 JEFFERSON AVE, TACOMA</a></p>
+      <br>
+      <p>Series of four drawings for a supplemental building located on "lots number 1-10-10 including block number 2508 at 25th street between Hood street and Jefferson avenue." 
+      The plans were drawn by Portland based Northwestern Ice and Cold Storage Company and created on January 30, 1929 and revised on February 12, 1929. 
+      This building was originally part of the Pacific Brewing & Malting Co, then the location of the Hemmingson Co. Warehouse before this building was remodeled with these plans as the Pacific Refrigerating Company in 1934. 
+      The building was renamed the Alpine Cold Storage building in the 1980s and suffered from a fire that led to it being demolished in July of 2003.</p>
+      <br>
+      <p>Technical Drawings: 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt069">Sheet 17-S-3</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt070">Sheet 17-S-5</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt071">Sheet 17-S-9</a> 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt068">Sheet 17-S-10</a> 
+        <br>
+        </p>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_pacific.jpeg" alt="Pacific Refrigerating Company (then Alpine Cold Storage) on fire in 2003" style="max-width:100%;"></a>
+      <br>
+      <sub>Pacific Refrigerating Company (then Alpine Cold Storage) on fire in 2003 
+      <br>  
+      The News Tribune - December 31, 2003 - Page 6. p. 1.</sub>
     </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
-    <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
-    <br>
-    Courtesy Northwest Room</sub>
-  </div>
-</div>
+    </div>
   
 </body>
 </html>
