--- a/pages/whitney.html
+++ b/pages/whitney.html
@@ -95,7 +95,9 @@ permalink: /whitney.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#934-36%20BROADWAY%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_waist" alt="New York Waist House" style="max-width:100%;"></a>
     <br>
-    <sub>New York Waist House, TPL Historic Building Files (BU-12524), 05-04-1927
+    <sub>New York Waist House, 
+    <br>  
+    TPL Historic Building Files (BU-12524), 05-04-1927
     <br>
     Courtesy Northwest Room</sub>
   </div>
