--- a/pages/crystal.html
+++ b/pages/crystal.html
@@ -62,7 +62,7 @@ permalink: /crystal.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1101-13%20MARKET%20ST%2C%20TACOMA">1101-13 MARKET ST, TACOMA</a></p>
       <br>
-      <p>Eight technical drawings for the Crystal Palace Public Market created by A.H. Albertson on December 27, 1926. 
+      <p>Eight technical drawings for the Crystal Palace Public Market created by <a href="https://aweymo.github.io/losttacoma/albertson.html">A.H. Albertson</a> on December 27, 1926. 
       The market opened in June of 1927 and was managed by Arthur E. Goodwin of Pike's Place Market in Seattle. The structure was closed in the late 1960s and demolished in 1973.</p>
       <br>
      </div>
