--- a/pages/babcock.html
+++ b/pages/babcock.html
@@ -77,7 +77,9 @@ permalink: /babcock.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
     <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
+    <sub>Pacific Savings and Loan
+    <br>  
+    TPL Historic Building Files (BU-11000), 11-04-1928
     <br>
     Courtesy Northwest Room</sub>
   </div>
